--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,7 @@ run/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+# Other files and directories to ignore
+.vscode/
+.out/
