--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java'
     id 'eclipse'
-    id "org.jetbrains.gradle.plugin.idea-ext" version "1.0.1"
-    id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.10"
+    id "com.github.johnrengelman.shadow" version "8.1.1"
 }
 
 repositories {
@@ -30,13 +30,6 @@ dependencies {
 
 shadowJar {
     relocate 'org.bstats', 'top.rathinosk.velocitywhitelist'
-    configurations = [project.configurations.shadowImplementation]
-    mergeServiceFiles()
-    transform(com.github.jengelman.gradle.plugins.shadow.transformers.ServiceFileTransformer)
-    // Ensure all dependencies are included in the shadow JAR
-    dependencies {
-        include(dependency('org.mariadb.jdbc:mariadb-java-client:2.7.12'))
-    }
 }
 
 group = 'top.rathinosk'
