--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,8 @@ def generateTemplates = tasks.register('generateTemplates', Copy) { task ->
             'version'    : project.version,
             'link'       : "https://github.com/rathinosk/VelocityWhitelist",
             'description': project.description,
-            'authors'    : "rathinosk"
+            'authors'    : "rathinosk",
+            'buildDate'  : java.time.LocalDate.now().format(java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd"))
     ]
     task.inputs.properties props
 
