feat: Add shadowJar task to CI workflow and include copyright notices in source files

--- a/.github/workflows/java-ci-with-gradle.yml
+++ b/.github/workflows/java-ci-with-gradle.yml
@@ -22,6 +22,10 @@ jobs:
         chmod +x gradlew
         ./gradlew build
 
+    - name: Run shadowJar
+      run: |-
+        ./gradlew shadowJar
+
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.6.1
       with:
