--- a/.github/workflows/java-ci-with-gradle.yml
+++ b/.github/workflows/java-ci-with-gradle.yml
@@ -29,10 +29,8 @@ jobs:
     - name: Get version from gradle.properties
       run: |
         VERSION=$(./gradlew properties | grep version: | awk '{print $2}')
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
-
-    - name: Upload a Build Artifact
+        echo "VERSION=$VERSION" >> $GITHUB_ENV    - name: Upload a Build Artifact
       uses: actions/upload-artifact@v4.6.1
       with:
-        name: VelocityWhitelist-${{ env.VERSION }}-all.jar
-        path: build/libs/VelocityWhitelist-${{ env.VERSION }}-all.jar
+        name: VelocityDiscordWhitelist-${{ env.VERSION }}-all.jar
+        path: build/libs/VelocityDiscordWhitelist-${{ env.VERSION }}-all.jar
