remove IDE and documentation files, add new files for error handling and player info

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,40 @@
     "java.compile.nullAnalysis.mode": "automatic",
     "java.configuration.updateBuildConfiguration": "automatic",
     "ollama-participant.model": "qwen3:8b",
-    "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx2G -Xms100m -Xlog:disable"
+    "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx2G -Xms100m -Xlog:disable",
+    "cSpell.words": [
+        "blazeandcave",
+        "bstats",
+        "codemc",
+        "cooldown",
+        "datapack",
+        "elytra",
+        "gson",
+        "hikari",
+        "jdbc",
+        "jitpack",
+        "johnrengelman",
+        "kyori",
+        "licence",
+        "mainrank",
+        "milkbowl",
+        "netherite",
+        "overworld",
+        "papermc",
+        "playername",
+        "retryable",
+        "snakeyaml",
+        "sonatype",
+        "subrank",
+        "terralith",
+        "theneweconomy",
+        "traveller",
+        "velocitydiscordwhitelist",
+        "velocitypowered",
+        "velocitywhitelist",
+        "wayfinder",
+        "xerial",
+        "xpchart",
+        "zaxxer"
+    ]
 }
