finalize fixes and cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,12 +11,14 @@
         "datapack",
         "elytra",
         "gson",
+        "Guice",
         "hikari",
         "jdbc",
         "jitpack",
         "johnrengelman",
         "kyori",
         "licence",
+        "luckperms",
         "mainrank",
         "milkbowl",
         "netherite",
