final context changes in most recent commit.

--- a/config-clean.yml
+++ b/config-clean.yml
@@ -1,40 +1,3 @@
-# VelocityDiscordWhitelist Configuration
-# Simple, clean configuration inspired by Spicord's design principles
-
-# Database Configuration - Required
-database:
-  host: "localhost"
-  port: 3306
-  database: "discord_whitelist"
-  username: "root"
-  password: "password"
-
-# Discord Bot Configuration - Required  
-discord:
-  enabled: true
-  token: "YOUR_BOT_TOKEN_HERE"
-  guild_id: "123456789012345678"
-  verification_channel: "123456789012345678"
-  roles:
-    admin: "987654321098765432"
-    verified: "765432109876543210"
-
-# Core Settings
-settings:
-  debug: false
-  session_timeout_minutes: 30
-  max_verification_attempts: 3
-  purgatory_server: "lobby"
-
-# Geyser Support (Bedrock Edition)
-geyser:
-  enabled: false
-  prefix: "."
-
-# LuckPerms Integration
-luckperms:
-  enabled: false
-  default_group: "verified"
-
-# Simple message customization
-# For full message customization, messages.yml will be created automatically
+# DEPRECATED - This file is no longer used
+# SAFE TO DELETE - Configuration moved to config.yaml only
+# This legacy file can be removed
