--- a/config-chat.yaml
+++ b/config-chat.yaml
@@ -1,3 +1,3 @@
 # DEPRECATED - This file is no longer used  
-# SAFE TO DELETE - Messages moved to config.yaml only  
+# SAFE TO DELETE - Configuration moved to config.yaml only  
 # This legacy file can be removed 
